<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content" tools:ignore="UselessParent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lid"
                    android:labelFor="@id/tid"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/tid"
                    android:inputType="text"/>
            <TextView
                    android:text="@string/primary_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lshowprimary"
                    android:labelFor="@id/tshowprimary"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/tshowprimary"
                    android:inputType="text"/>
            <TextView
                    android:text="@string/secondary_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lshowsecondary"
                    android:labelFor="@id/tshowsecondary"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/tshowsecondary"
                    android:inputType="text"/>
            <TextView
                    android:text="@string/normal_click"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lcmdnormal"
                    android:labelFor="@id/tcmdnormal"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/tcmdnormal"
                    android:inputType="textMultiLine"/>
            <TextView
                    android:text="@string/long_click"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lcmdlong"
                    android:labelFor="@id/tcmdlong"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/tcmdlong"
                    android:inputType="textMultiLine"/>
            <TextView
                    android:text="@string/settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lsettings"
            />
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ssView"
                    android:layout_marginBottom="8dp">
                <Button
                        android:text="@string/settings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/bsettings"
                        android:layout_marginBottom="8dp"
                />
            </LinearLayout>
            <Button
                    android:text="@string/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/bsave"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>