<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:id="@+id/settings_main">

    <Button
            android:text="@string/rows"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/settings_rows"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/settings_keyboards"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:onClick="onClick"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/TestBox"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/testbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:labelFor="@+id/TestBox"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/TestBox"/>
    <Button
            android:text="@string/keyboards"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/settings_keyboards"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:onClick="onClick"/>
    <Button
            android:text="@string/keys"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/settings_keys"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/settings_rows"
            android:onClick="onClick"/>
    <TextView
            android:text="@string/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"/>
    <Button
            android:text="@string/set_input_method"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/set_input_method"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:onClick="onClick" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/enable_input_method"/>
    <Button
            android:text="@string/enable_input_method"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/enable_input_method"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/reset_default_settings"
            android:onClick="onClick"/>
    <Button
            android:text="@string/reload_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/reset_default_settings"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.53"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/settings_keys"
            android:onClick="onClick"/>
</android.support.constraint.ConstraintLayout>