<resources>
    <string name="app_name">CKeyBoarDD</string>
    <string name="testbox">TestBox</string>
    <string name="rows">Rows</string>
    <string name="keyboards">Keyboards</string>
    <string name="buttons">Buttons</string>
    <string name="keys">Keys</string>
    <string name="set_input_method">Set Input Method</string>
    <string name="enable_input_method">Enable Input Method</string>
    <string name="reload_reset"> Reload/Reset</string>
    <string name="primary_show">Primary show</string>
    <string name="id">ID</string>
    <string name="secondary_show">Secondary show</string>
    <string name="normal_click">Normal Click</string>
    <string name="long_click">Long click</string>
    <string name="save">SAVE</string>
    <string name="addnew">NEW</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
</resources>
