<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="60dp"
        android:layout_width="60dp"
        android:background="#000000"
        android:id="@+id/key"
>
    <TextView
            android:id="@+id/primary"
            android:text=" "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="2dp"
            android:layout_marginTop="1dp"
            android:textSize="30sp"
            android:textColor="#ffffff"
    />
    <TextView
            android:id="@+id/secondary"
            android:text=" "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="#b0b0b0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="2dp"
    />
</android.support.constraint.ConstraintLayout>